--- a/scss/layout/_containers.scss
+++ b/scss/layout/_containers.scss
@@ -65,6 +65,11 @@
             margin-left: -7px;
         }
     }
+    br {
+        @media screen and (min-width: 480px) {
+            display: none;
+        }
+    }
 }
 
 .cut-half {
